--- a/frontend/css/admin.css
+++ b/frontend/css/admin.css
@@ -68,6 +68,7 @@ header {
   font-size: 15px;
   transition: background-color 0.3s ease;
   box-sizing: border-box;
+  box-shadow: 1px 1px 3px grey;
 }
 
 #btn-user i {
@@ -112,7 +113,7 @@ header {
 
 .user-form-section h2 {
   text-align: center;
-  font-size: 18px;
+  font-size: 15px;
   color: #263d68;
   margin-bottom: 20px;
   text-shadow: 1px 1px 2px rgba(128, 128, 128, 0.144);
@@ -124,7 +125,7 @@ header {
 }
 
 #user-form label {
-  font-size: 14px;
+  font-size: 12px;
   color: #525151;
   margin-bottom: 5px;
 }
@@ -134,7 +135,7 @@ header {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  font-size: 14px;
+  font-size: 12px;
   margin-bottom: 15px;
 }
 
@@ -152,11 +153,11 @@ header {
 #user-form button {
   background-color: #263d68;
   color: white;
-  padding: 10px;
+  padding: 5px;
   border: none;
   border-radius: 5px;
   border: 1px solid transparent;
-  font-size: 16px;
+  font-size: 12px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
