--- a/frontend/css/professionals.css
+++ b/frontend/css/professionals.css
@@ -2,22 +2,22 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Lexend", serif;
 }
 
 body {
   background-color: #eaeded4a;
 }
 
-
 header {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #fff;
+  background-color: white;
   z-index: 1000;
   border-bottom: 1px solid #ccc;
-  max-height: 70px;
+  max-height: 60px;
   box-sizing: border-box;
 }
 
@@ -25,8 +25,8 @@ header {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 5px;
   width: 100%;
+  padding: 4px;
 }
 
 .navbar div {
@@ -40,25 +40,21 @@ header {
   margin-right: 0;
 }
 
-.more button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    background-color: #ffffff;
-    border: 1px solid transparent;
-    border-radius: 5px;
-    cursor: pointer;
+.more {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: auto;
+  background-color: white;
+  text-align: center;
 }
 
-.more button i {
-  font-size: 30px;
-  color: #3498db;
+.logo-alfaro {
+  width: 40px;
+  height: 40px;
 }
 
-.more button:hover {
-  border-color: #3498db;
-}
 
 #btn-user {
   display: flex;
@@ -69,14 +65,15 @@ header {
   border: 1px solid transparent;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 15px;
   transition: background-color 0.3s ease;
   box-sizing: border-box;
+  box-shadow: 1px 1px 3px grey;
 }
 
 #btn-user i {
-  font-size: 32px;
-  color:rgba(102, 102, 102, 0.915) ;
+  font-size: 22px;
+  color: rgba(102, 102, 102, 0.915);
   margin-right: 8px;
 }
 
@@ -91,15 +88,16 @@ header {
 
 .navbar a {
   text-decoration: none;
-  color: #7e7f7f;
-  font-size: 20px;
+  color: #263d68;
+  font-size: 15px;
   margin: 0 10px 0 10px;
+  text-shadow: 1px 1px 3px rgba(128, 128, 128, 0.608);
 }
 
 .navbar a:hover {
-  color: #525151;
+  color: #ba0707;
 }
 
 .navbar a.selected {
-  color: #525151;
+  color: #263d6855;
 }
